// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReportFilter component - Editions should render initial state when a selectedEdition has been removed 1`] = `
<div>
   
  <section
    class="svelte-112u3yn"
  >
    <div
      class="report-filter svelte-112u3yn"
    >
      <div
        class="filter-selector svelte-112u3yn"
        data-testid="display-modal-button"
      >
        <div
          class="icon-wrapper  svelte-112u3yn"
        >
          <div
            class=" svelte-zpbvvv"
            style="--icon-width: 20px; --icon-height: 20px;"
          >
            <object
              src="ic-filter.svg/"
            />
          </div>
        </div>
         
        <div>
          No filters applied
        </div>
      </div>
       
      <div
        class="filter-chips svelte-112u3yn"
      />
       
    </div>
  </section>
  
</div>
`;

exports[`ReportFilter component - Editions should render the ReportFilter component with a selectedEdition 1`] = `
<div>
   
  <section
    class="svelte-112u3yn"
  >
    <div
      class="report-filter svelte-112u3yn"
    >
      <div
        class="filter-selector svelte-112u3yn"
        data-testid="display-modal-button"
      >
        <div
          class="icon-wrapper active  svelte-112u3yn"
        >
          <div
            class=" svelte-zpbvvv"
            style="--icon-width: 20px; --icon-height: 20px;"
          >
            <object
              src="ic-filter.svg/"
            />
          </div>
        </div>
         
        <div>
          Event/edition
        </div>
      </div>
       
      <div
        class="filter-chips svelte-112u3yn"
      >
        <div
          class=" clickable removeable svelte-qoqlu9"
          data-testid="chip"
        >
          <span
            class="label svelte-qoqlu9"
          >
            Test Event / Test Edition
          </span>
           
          <span
            class="cross svelte-qoqlu9"
            data-testid="remove-chip-button"
          >
            <div
              class=" svelte-zpbvvv"
              style="--icon-width: 8px; --icon-height: 8px;"
            >
              <object
                src="ic-delete.svg/"
              />
            </div>
          </span>
        </div>
      </div>
       
    </div>
  </section>
  
</div>
`;
